--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@ permalink:        pretty
 title:            wguss
 tagline:          'Artificially intelligent mathematician.'
 description:      'I do machine learning, mathematics, and <a href="https://thepelicants.bandcamp.com/">music</a>.'
-baseurl:          http://wguss.ml
+baseurl:          http://wguss.ml/
 
 author:
   name:           'William Guss'
-  url:            "http://wguss.ml/"
+  url:            http://wguss.ml/
 
 
 # Custom vars
