--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ permalink:        pretty
 # Setup
 title:            wguss
 tagline:          'Artificially intelligent mathematician.'
-description:      'I do machine learning, mathematics, and <a href="https://thepelicants.bandcamp.com/">music</a>.'
+description:      'I do machine learning, mathematics, and music'
 baseurl:          http://wguss.ml/
 
 author:
